--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = bash ~/.config/hypr/scripts/killportals.sh
 exec-once = waybar & hyprpaper & webcord & spotify & looking-glass-client
-exec-once = openrgb -p PURPLE.orp | cat
+exec-once = openrgb -p PURPLE.orp
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
