--- a/dot_config/neofetch/config.conf
+++ b/dot_config/neofetch/config.conf
@@ -10,6 +10,7 @@ print_info() {
     info "$(color 2) " de
     info "$(color 2) " term
     info "$(color 2) " shell
+    info underline
     info cols
 }
 
