--- a/dot_config/kitty/private_current-theme.conf
+++ b/dot_config/kitty/private_current-theme.conf
@@ -1,33 +1,65 @@
-## name: Mayukai
-## author: Gulajava Ministudio
-## license: MIT
-## upstream: https://github.com/elianiva/mayukai-terminal-themes/blob/master/kitty.conf
-## blurb: Mayukai Theme is dark and yellow bluish mirage theme with
-## bright colors for easy readibility syntax. 
-## This theme is inspired from mixed color swatch in Ayu Theme,
-## Material Theme, Monokai, Andromeda, and Gruvbox Darktooth Original Colors. 
+# Dark One Nuanced by ariasuni, https://store.kde.org/p/1225908
+# Imported from KDE .colorscheme format by thematdev, https://thematdev.org
+# For migrating your schemes from Konsole format see 
+# https://git.thematdev.org/thematdev/konsole-scheme-migration
 
-#: The basic colors
 
-background   #1b1c24
-foreground   #cbccc6
-
-color0       #191e2a
-color1       #ed8274
-color2       #a6cc70
-color3       #fad07b
-color4       #95e6cb
-color5       #cfbafa
-color6       #95e6cb
-color7       #c7c7c7
-
-color8      #686868
-color9      #f28779
-color10     #bae67e
-color11     #ffd580
-color12     #95e6cb
-color13     #d4bfff
-color14     #95e6cb
-color15     #ffffff
+# importing Background
+background #1b1c24
+# importing BackgroundFaint
+# importing BackgroundIntense
+# importing Color0
+color0 #3f4451
+# importing Color0Faint
+color16 #282c34
+# importing Color0Intense
+color8 #4f5666
+# importing Color1
+color1 #e06c75
+# importing Color1Faint
+color17 #c25d66
+# importing Color1Intense
+color9 #ff7b86
+# importing Color2
+color2 #98c379
+# importing Color2Faint
+color18 #82a566
+# importing Color2Intense
+color10 #b1e18b
+# importing Color3
+color3 #d19a66
+# importing Color3Faint
+color19 #b38257
+# importing Color3Intense
+color11 #efb074
+# importing Color4
+color4 #61afef
+# importing Color4Faint
+color20 #5499d1
+# importing Color4Intense
+color12 #67cdff
+# importing Color5
+color5 #c678dd
+# importing Color5Faint
+color21 #a966bd
+# importing Color5Intense
+color13 #e48bff
+# importing Color6
+color6 #56b6c2
+# importing Color6Faint
+color22 #44919a
+# importing Color6Intense
+color14 #63d4e0
+# importing Color7
+color7 #e6e6e6
+# importing Color7Faint
+color23 #c8c8c8
+# importing Color7Intense
+color15 #ffffff
+# importing Foreground
+foreground #abb2bf
+# importing ForegroundFaint
+# importing ForegroundIntense
+# importing General
 
 background_opacity 0.80
