--- a/dot_config/kitty/private_current-theme.conf
+++ b/dot_config/kitty/private_current-theme.conf
@@ -21,7 +21,7 @@ inactive_tab_foreground #545c7e
 #tab_bar_background #15161E
 
 # normal
-color0 #15161E
+color0 #cbccc6
 color1 #f7768e
 color2 #9ece6a
 color3 #e0af68
