--- a/dot_config/kitty/private_current-theme.conf
+++ b/dot_config/kitty/private_current-theme.conf
@@ -1,47 +1,33 @@
-# vim:ft=kitty
-
-## name: Tokyo Night
+## name: Mayukai
+## author: Gulajava Ministudio
 ## license: MIT
-## author: Folke Lemaitre
-## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty_tokyonight_night.conf
+## upstream: https://github.com/elianiva/mayukai-terminal-themes/blob/master/kitty.conf
+## blurb: Mayukai Theme is dark and yellow bluish mirage theme with
+## bright colors for easy readibility syntax. 
+## This theme is inspired from mixed color swatch in Ayu Theme,
+## Material Theme, Monokai, Andromeda, and Gruvbox Darktooth Original Colors. 
 
+#: The basic colors
 
-background #1b1c24
-foreground #cbccc6
-selection_background #33467C
-selection_foreground #c0caf5
-url_color #73daca
-cursor #c0caf5
+background   #1b1c24
+foreground   #cbccc6
 
-# Tabs
-active_tab_background #7aa2f7
-active_tab_foreground #1f2335
-inactive_tab_background #292e42
-inactive_tab_foreground #545c7e
-#tab_bar_background #15161E
+color0       #191e2a
+color1       #ed8274
+color2       #a6cc70
+color3       #fad07b
+color4       #95e6cb
+color5       #cfbafa
+color6       #95e6cb
+color7       #c7c7c7
 
-# normal
-color0 #cbccc6
-color1 #f7768e
-color2 #9ece6a
-color3 #e0af68
-color4 #7aa2f7
-color5 #bb9af7
-color6 #7dcfff
-color7 #a9b1d6
-
-# bright
-color8 #414868
-color9 #f7768e
-color10 #9ece6a
-color11 #e0af68
-color12 #7aa2f7
-color13 #bb9af7
-color14 #7dcfff
-color15 #c0caf5
-
-# extended colors
-color16 #ff9e64
-color17 #db4b4b
+color8      #686868
+color9      #f28779
+color10     #bae67e
+color11     #ffd580
+color12     #95e6cb
+color13     #d4bfff
+color14     #95e6cb
+color15     #ffffff
 
 background_opacity 0.80
