--- a/dot_config/micro/settings.json
+++ b/dot_config/micro/settings.json
@@ -4,6 +4,6 @@
 	"lsp.formatOnSave": true,
 	"lsp.tabcompletion": true,
 	"lsp.ignoreTriggerCharacters": "completion,signature",
-	"lsp.autocompleteDetails": false
+	"lsp.autocompleteDetails": false,
     "mkparents": true
 }
