--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -132,7 +132,7 @@ bind = $mainMod, D, exec, wofi --show drun
 #bind = $mainMod, P, pseudo, # dwindle
 #bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
-bind = PRINT, exec, grimblast --notify copysave area
+bind = SHIFT, Print, exec, grimblast --notify copysave area
 #bind = SHIFT, Print, exec, wf-recorder --audio=alsa_output.pci-0000_0f_00.4.iec958-stereo.monitor --device=/dev/dri/renderD128 -F fps=60 --codec=h264_qsv -p b=3.5M -g "$(slurp)" -f ~/Videos/$(date "+%Y.%m.%d-%H.%M.%S").mp4
 bind = $mainMod, W, exec, looking-glass-client
 bind = $mainMod, O, exec, openrgb
