--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -133,7 +133,7 @@ bind = $mainMod, D, exec, wofi --show drun
 #bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
 bind = SHIFT, Print, exec, grimblast --notify copysave area
-bind = CTRL, Print, exec, bash ~/.config/hypr/scripts/screenrecord.sh
+bind = CTRL, Print, exec, ~/.config/hypr/scripts/screenrecord.sh
 bind = $mainMod, W, exec, looking-glass-client
 bind = $mainMod, O, exec, openrgb
 bind = SHIFT $mainMod, F, exec, firefox
